# VoxelEngine

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: camera.cpp.D32DE43A9C2374A9.idx  camera.hpp.7FD9498D4492E372.idx  glad.c.7EB5B510D903A770.idx  glad.h.6B2D435D2193F9BC.idx  khrplatform.h.ACCCF1F02A962F3A.idx  main.cpp.6641A222FCB52504.idx  shader.cpp.6793CF6FAD7BEF70.idx  shader.hpp.7F4FA32B6D4D7F5D.idx  voxel.cpp.DEC2C63C8E7900E3.idx  voxel.hpp.1A9678B3E5BC5D13.idx
include/: camera.hpp  chunk.hpp  fragment_shader.glsl  shader.hpp  vertex_shader.glsl  voxel.hpp
include/glad/: glad.h
src/: camera.cpp  chunk.cpp  glad.c  main.cpp  shader.cpp  voxel.cpp
